# fastapi-example

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
src/fastapi_example/: app.py  config.py  models.py  utils.py
